# multi_agent_platform

./: .gitignore  Makefile  README.md  deploy.sh  ecosystem.config.js  pyproject.toml  test.txt
backend/: main.py
backend/agents/: base_agent.py
backend/agents/AutoGen/Cot Agent1/: agent.py
backend/agents/LangChain/test_langchain/: agent.py
backend/agents/LangChain/test_tool_langchain/: agent.py
backend/agents/LangGraph/CoT_gen_agent/: agent.py
backend/agents/LangGraph/CoT_gen_agent2/: agent.py
backend/agents/LangGraph/CoT_gen_tree/: agent.py
backend/agents/LangGraph/test_mcp_langgraph/: agent.py
backend/agents/crewAI/research_crew/: agent.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: chat.py  config.py
backend/core/: agent_registry.py
frontend/: app.py  auth.py  config.json
mcp_server/: search_server.py  weather_server.py
