[project]
name = "multi-agent-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentops>=0.4.16",
    "crewai>=0.130.0",
    "crewai-tools>=0.0.1",
    "fastapi>=0.115.13",
    "google-search-results>=2.4.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "mcp>=1.9.4",
    "openai-agents>=0.0.19",
    "pyautogen>=0.9",
    "streamlit>=1.46.0",
    "tavily-python>=0.7.8",
    "uvicorn[standard]>=0.34.3",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
